# avast-tl-retdec

./: CMakeLists.txt
.github/workflows/: retdec-ci.yml
.github/workflows/Linux/: build.sh  install-deps.sh  run-tests.sh
.github/workflows/Windows/: build.sh  prepare-clang.sh  run-tests.sh
.github/workflows/macOS/: build.sh  run-tests.sh
cmake/: MparkVariantConfig.cmake.in  UtilsConfig.cmake.in  WhereamiConfig.cmake.in  options.cmake  utils.cmake
include/retdec/capstone2llvmir/powerpc/: powerpc_defs.h
include/retdec/fileformat/file_format/pe/: pe_format.h
include/retdec/stacofin/: stacofin.h
src/bin2llvmir/: CMakeLists.txt
src/bin2llvmir/optimizations/decoder/: decoder.cpp
src/bin2llvmir/optimizations/inst_opt/: inst_opt.cpp
src/bin2llvmir/optimizations/param_return/: param_return.cpp
src/bin2llvmir/providers/abi/: arm.cpp
src/capstone2llvmir/: CMakeLists.txt  capstone2llvmir_impl.cpp  capstone2llvmir_impl.h
src/capstone2llvmir/arm/: arm.cpp  arm_impl.h  arm_init.cpp
src/capstone2llvmir/arm64/: arm64.cpp  arm64_init.cpp
src/capstone2llvmir/powerpc/: powerpc.cpp  powerpc_impl.h  powerpc_init.cpp
src/capstone2llvmir/x86/: x86.cpp  x86_init.cpp
src/cpdetect/heuristics/: pe_heuristics.cpp
src/fileformat/: CMakeLists.txt
src/fileformat/file_format/: file_format.cpp
src/fileformat/file_format/pe/: pe_format.cpp
src/fileformat/types/import_table/: import_table.cpp
src/fileformat/types/sec_seg/: sec_seg.cpp
src/fileformat/utils/: format_detection.cpp
src/stacofin/: CMakeLists.txt  stacofin.cpp
src/utils/: CMakeLists.txt
support/yara_patterns/tools/pe/x86/: packers.yara
tests/: CMakeLists.txt
tests/capstone2llvmir/: CMakeLists.txt  arm_tests.cpp  powerpc_tests.cpp
tests/demangler/: dem_test.h  gcc_tests.cpp
tests/utils/: CMakeLists.txt
